Removed githublink in om.html

--- a/om.html
+++ b/om.html
@@ -55,7 +55,7 @@
     <div id="om" class="container">
       <h1 class=page-header>Om <em>Hvor er jeg?</em></h1>
       <p><em>Hvor er jeg?</em> giver dig - ud fra din position - oplysninger, hvor i Danmark du er.</p>
-      <p>Formålet med applikationen er give et eksempel på, hvad <a href='https://dawadocs.dataforsyningen.dk'>Danmarks Adressers Web API - DAWA</a> kan bruges til. Kildeteksten til applikationen finder du på <a href="https://github.com/DanmarksAdresser/hvor.aws.dk">GitHub</a>.</p>
+      <p>Formålet med applikationen er give et eksempel på, hvad <a href='https://dawadocs.dataforsyningen.dk'>Danmarks Adressers Web API - DAWA</a> kan bruges til.
       <p>Applikationen er udviklet af <a href="https://sdfe.dk">Styrelsen for Dataforsyning og Effektivisering</a></p> 
       <p>Du kan holde dig orienteret om DAWA på <a href="https://dataforsyningen.dk/">Dataforsyningen</a></p>
     </div>
