--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
     <script type="text/javascript">
+      alert('Denne hjemmeside lukker den 1. oktober 2021.');
         /*<![CDATA[*/
         (function() {
             var sz = document.createElement('script');
